[package]
name = "tcp_proto"
version = "0.1.0"
authors = ["ziyan <wu000598@umn.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tun-tap= "0.1.2"
etherparse= "0.8"
log = "0.4.8"
env_logger = "0.7.1"

[lib]
name= "tcp_proto"
